<resources>
    <string name="app_name">Week5</string>
    <string name="welcome_to">Welcome to</string>
    <string name="foodhub">FoodHub</string>
    <string name="intro_info">Your favorite foods delivered \nfast at your door</string>
    <string name="sign_in_text">sign in with</string>
    <string name="start_with">Start with email or phone</string>
    <string name="question_account">Already have an account?</string>
    <string name="sign_in_account"><u>Sign in</u></string>
    <string name="skip_button_text">Skip</string>
    <string name="verification_description">Please type the verification code sent to\nprelookstudio@gmail.com</string>
    <string name="big_message_1_text">Browse your menu\nand order directly</string>
    <string name="small_message_onboarding_text">Our app can send you everywhere, even\nspace. For only $2.99 per month</string>
    <string name="login_question_text">Don\'t have an account?</string>
    <string name="big_message_2_text">Even to space with\nus! Together</string>
    <string name="big_message_3_text">Pickup delivery at\nyour door</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>